add_executable(ptr ptr.c)

add_executable(stringTest1 stringTest1.c)

add_executable(stringTest2 stringTest2.c)

add_executable(stringTest3 stringTest3.c)

add_executable(stringTest4 stringTest4.c)

add_executable(transferTable transferTable.c)

add_executable(terminalTest terminalTest.c)

add_executable(qsort qsort.c)

add_executable(qsortBubblesort qsortBubblesort.c)
